--- a/index.html
+++ b/index.html
@@ -1,22 +1,51 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
 <head>
-
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script type="text/javascript" src="three.js"></script>
+    <link rel="stylesheet" href="three.css">
+    <title> Password Generator</title>
 </head>
 
-<header>
-<nav>
-
-
-</nav>
-</header>
-
 <body>
+<h1>Password Generator</h1>  
 
+<div class="card">
+<h2> Generate A Password</h2>
+<h3 class="password"> Your New Password </h3>
+
+<!-- Allows User to select how many characters they want-->
+<form>
+<div>
+  <input type= "number" min="1" max="20" value="8">
+  <label for="Number of Characters"> Number Of Characters</label
+  id="characterAmountNumber">
+</div>
+
+  <!-- Allows User to select if they want uppercase letters -->
+  <div>
+    <input type= "checkbox" id=includeUppercase>
+    <label for="includeUppercase"> I want Uppercase Letters</label>
+  </div>
+  
+  <!-- Allows User to select if they want numbers --> 
+  <div>
+    <input type= "checkbox" id=includeNumbers>
+    <label for="includeNumbers"> I want Numbers</label>
+</div>
+
+  <!-- Allows User to select if they want symbols-->
+  <div>
+    <input type= "checkbox" id=includeSymbols>
+    <label for="includeSymbols"> I want Symbols</label>
+</div>
+
+  <button type= "submit" class="btn">Generate Password</button>
+</form>
+</div>
 
 
 </body>
-
 </html>
